Fix list.of to singletonList